fixes center align and places janky margin instead

--- a/src/css/MobileTrack.module.css
+++ b/src/css/MobileTrack.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 80%;
-  margin: 0 auto 42px;
+  margin: 0 auto 42px 9%;
 }
 
 .trackContainer {
