--- a/src/css/MobileTracks.module.css
+++ b/src/css/MobileTracks.module.css
@@ -1,11 +1,7 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .headingContainer {
   text-align: left;
+  width: 86%;
+  margin-left: 9%;
 }
 
 .heading {
